Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Tue Apr 2 2013 Thunor <thunorsif@hotmail.com>
- Added examples/demoscene filled with SFR's awesome demos.

* Mon Apr 1 2013 Thunor <thunorsif@hotmail.com>
- Added gtk3 specific code to the comboboxtext and comboboxentry widgets
  so that they now function identically to the gtk2 equivalents.
- The file selection dialog filename retrieval issue was specific to
  less than gtk-2.4.0 so I've wrapped it in a macro for those versions.
- Added "GTK+ 2/3" to the supported libraries list with gtkdialog -v.
- Added the "column-resizeable" tag attribute to the tree widget.
- Updated a few wiki/reference pages with new info, fixed bad links.
- Added helpful error messages when attempting to create combobox, list
  and table widgets with GTK+ 3.

* Sat Mar 30 2013 Thunor <thunorsif@hotmail.com>
- Added initial support for GTK+ 3 with the --enable-gtk3=yes configure
  option; widgets removed: combobox, list, table; require rewriting:
  comboboxtext, comboboxentry, file selection dialog filename retrieval.

* Sun Jan 6 2013 Thunor <thunorsif@hotmail.com>
- Version 0.8.3 released (r502)
- Finished the Pfeme example application.

* Mon Dec 10 2012 Thunor <thunorsif@hotmail.com>
- Corrected to backticks and tested with dash all of the examples.
  Those that require bash also use bash where necessary within actions.

* Sun Dec 9 2012 Thunor <thunorsif@hotmail.com>
- Corrected to backticks and tested with dash all examples up to
  playmusic (so far show_and_hide progressbar with dash is unstable!).

* Sat Dec 8 2012 Thunor <thunorsif@hotmail.com>
- Corrected to backticks and tested with dash all examples up to
  miscellaneous.

* Thu Dec 6 2012 Thunor <thunorsif@hotmail.com>
- Corrected to backticks and tested with dash all examples up to
  menuitemseparator.

* Thu Dec 6 2012 Thunor <thunorsif@hotmail.com>
- Corrected to backticks and tested with dash all examples up to frame.