@@ -1606,7 +1606,7 @@ next_item:
  *                                                                     *
  ***********************************************************************/
 
-#if !GTK_CHECK_VERSION(3,0,0)	/* gtk3: Redundant: Only used by action_append() which isn't being used anyway so purge it */
+/* Redundant: Only used by action_append() which isn't being used anyway so purge it.
 int append_fromto_variable(const char *from, const char *to)
 {
 	GtkTreeModel *model;
@@ -1675,8 +1675,7 @@ int append_fromto_variable(const char *from, const char *to)
 		return FALSE;
 	}
 	return TRUE;
-}
-#endif
+} */
 
 /***********************************************************************
  *                                                                     *
